Fix letter-spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,6 +18,7 @@
   color: #0D5ADC;
   display: flex;
   align-items: center;
+  letter-spacing: 0.05em;
 }
 
 .Header__current-page-label-and-profile {
@@ -34,6 +35,7 @@
   display: flex;
   align-items: center;
   margin-left: 48px;
+  letter-spacing: 0.02em;
 }
 
 .Header__profile-icon {
